--- a/WebContent/pages/story/day.html
+++ b/WebContent/pages/story/day.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="vod-holder">
 			<span class="video-player">
-				<a href="#">
+				<a href="https://www.youtube.com/embed/1m6zxMeo4Rk?amp;autoplay=1">
 					<img src="../../asset/image/story/day/bg_sec1_video.jpg" alt="영상 이미지" />
 				</a>
 			</span>
@@ -109,8 +109,7 @@
 				<strong>참여 유의 사항</strong>
 				<p>
 					<span>이벤트에 대한 자세한 문의는 렉서스 페이스북 메시지로 부탁 드립니다.
-
-                        <a href="#">
+                        <a href="https://www.facebook.com/lexusKR/" target="_blank">
                         	<span>문의하기</span>
                         	<em><img src="../../asset/image/story/day/icon_sec4_fb.png" alt="facebook" /></em>
                        	</a>
@@ -173,7 +172,7 @@
             				<dd>주소: 경기도 용인시 처인구 포곡읍 에버랜드로 199
                             <span>명칭: 삼성 에버랜드 스피드 웨이 자동차 경주장</span>
                             <span>내비게이션 검색 (삼성교통박물관)</span>
-                  	</dfont-family:'SDGothicNeo1SB';d>
+                  	</dd>
             			</dl>
             		</li>
             		<li class="second">
@@ -195,7 +194,7 @@
            				</dl>
             		</li>
             	</ul>
-            	<a href="#">
+            	<a href="http://map.naver.com/?pinId=19286171&pinType=site&dlevel=11&y=169884324eab7a4cd680d904cef782b6&x=35692ac7eb50ec4dc306709252bfe9a2&enc=b64" target="_blank">
             		<span>네이버 지도에서 자세히보기</span>
             	</a>
             	<h4>행사 안내사항</h4>
