--- a/WebContent/pages/story/journey.html
+++ b/WebContent/pages/story/journey.html
@@ -14,7 +14,8 @@
         <img src="../../asset/image/story/journey/head_kv.png" alt="LEXUS AMAZING HYBRID JOURNEY">
         <span><img src="../../asset/image/story/journey/head_detail_kv.png" alt="#EcoLife / 2016.10.13 - 2016.10.15 강원도 일대"></span>
       </h2>
-      <a href="#">
+      <a href="https://www.youtube.com/embed/kD3XfMOWPYE?amp;autoplay=1">
+
         <img src="../../asset/image/story/journey/btn_vod_kv.jpg" alt="">
       </a>
       <p><img src="../../asset/image/story/journey/txt_kv.png" alt="렉서스 하이브리드와 함께 즐기는 AMAZING ROAD 더 나은 삶을 위한 첫번째 여정에 당신을 초대합니다 /모집기간 2016.09.12 - 2016.09.25"></p>
