--- a/WebContent/pages/story/philosophy.html
+++ b/WebContent/pages/story/philosophy.html
@@ -43,7 +43,7 @@
 			</li>
 			<li>
 				<h4><img src="../../asset/image/story/philosophy/txt_s3_2.png" alt="L finesse" /></h4>
-				<p><img src="../../asset/image/story/philosophy/img_s3_21.png" alt="alt="렉서스의 디자이너들에게, 모든 자동차는 두 가지의 잘 조화된 개념을 포함하고 있습니다." /></p>
+				<p><img src="../../asset/image/story/philosophy/img_s3_21.png" alt="렉서스의 디자이너들에게, 모든 자동차는 두 가지의 잘 조화된 개념을 포함하고 있습니다." /></p>
 				<img src="../../asset/image/story/philosophy/img_s3_22.jpg" alt="L finesse concept board" />
 			</li>
 		</ul>
@@ -52,12 +52,12 @@
 	<article class="care_phil">
 				<h3><img src="../../asset/image/story/philosophy/head_s4.png" alt="LEXUS CUSTOMER CARE" /></h3>
 				<p><img src="../../asset/image/story/philosophy/txt_s4.png" alt="Unsurpassed Customer Care Omotenashi" /></p>
-				<img src="../../asset/image/story/philosophy/img_s4.jpg" alt="alt="customer care image" />
+				<img src="../../asset/image/story/philosophy/img_s4.jpg" alt="customer care image" />
 
 	</article>
 
 	<article class="craft_phil">
-		<h3><img src="../../asset/image/story/philosophy/head_s5.png"" alt="PRECISION CRAFTSMANSHIP" /></h3>
+		<h3><img src="../../asset/image/story/philosophy/head_s5.png" alt="PRECISION CRAFTSMANSHIP" /></h3>
 		<p><img src="../../asset/image/story/philosophy/txt_s5.png" alt="TAKUMI 렉서스다운 제품에 숨결을 불어넣다 : 장인정신" /></p>
 		<img src="../../asset/image/story/philosophy/img_s5.jpg" alt="craftsmanship image" />
 	</article>
