--- a/WebContent/pages/story/project.html
+++ b/WebContent/pages/story/project.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- <script src="/thelexus/asset/js/story.js"></script> -->
+<!-- <script src="/thelexus/asset/js/project.js"></script> -->
+<script src="../../asset/js/project.js"></script>
 <link rel="stylesheet" href="../../asset/css/import.css">
 <title>Amazing project</title>
 </head>
@@ -13,10 +14,10 @@
 
 		<div class="project-menu">
 			<ul>
-				<li><a href="#">AMAZING PROJECT</a></li>
-				<li><a href="#">AMAZING IN MOTION</a></li>
-				<li><a href="#">LEXUS SHORT FILM</a></li>
-				<li><a href="#">LEXUS DESIGN AWARD</a></li>
+				<li><a href="#project">AMAZING PROJECT</a></li>
+				<li><a href="#motion">AMAZING IN MOTION</a></li>
+				<li><a href="#film">LEXUS SHORT FILM</a></li>
+				<li><a href="#award">LEXUS DESIGN AWARD</a></li>
 			</ul>
 		</div>
 
@@ -24,7 +25,7 @@
 
 		<!-- 각각 페이지들 -->
 		  <ul>
-		  	<li class="project_main" style="display:none";>
+		  	<li class="project_main" id="project" style="display:block";>
 		  	  <section class="amazing-project">
 						<h2><img src="../../asset/image/story/project/amazing_in_motion_main-txt.png" alt="AMAZING IN MOTION / 기대를 넘는 놀라움과 감동을 만나다" /></h2>
 						<ul>
@@ -47,14 +48,15 @@
 		  	  </section>
 		  	</li>
 
-		  	<li class="amazing-in-motion" style="display:none";>
+		  	<li class="amazing-in-motion" id="motion" style="display:none";>
 					<section class="motion-con-1">
 						<div class="fig-con">
 							<img src="../../asset/image/story/project/kvback_0.jpg" alt="SLIDE 이미지 0" />
+
 						</div>
 						<div class="main-txt">
 							<h2><img src="../../asset/image/story/project/kvback_0_txt.png" alt="AMAZING IN MOTION SLIDE 렉서스 기술력, 디자인, 상상력의 가장 이상적인 결합" /></h2>
-								<a href="#" class="btn_play"><img src="../../asset/image/story/project/btn_model_play.png" alt="영상 재생" /></a>
+								<a href="https://www.youtube.com/embed/HCyGRgKZpl8?amp;autoplay=1" class="btn_play"><img src="../../asset/image/story/project/btn_model_play.png" alt="영상 재생" /></a>
 								<a href="#" class="btn-next-arr">click to go down</a>
 								<!-- background:url(../../asset/image/story/project/arr_dn.png') 0 0 no-repeat) -->
 						</div>
@@ -81,17 +83,17 @@
 							<ul>
 								<li class="step">
 									<img src="../../asset/image/story/project/hover_step1_txt.png" alt="THESTORY 마침내 트랙 위를 날다 불가능이라 생각되는 것을 가능하게 만들기 위해 기술, 디자인, 혁신의 모든 한계를 넘다." />
-									<a href="#">
+									<a href="https://www.youtube.com/embed/q_BYvUlDviM?amp;autoplay=1">
 										<img src="../../asset/image/story/project/hover_step1_img.jpg" alt="THESTORY image" />
 										<img src="../../asset/image/story/project/hover_play_btn.png" class="right_play_btn" alt="자세히 보기" />
 									</a>
 								</li>
 								<li class="step">
-									<a href="#">
+									<a href="https://www.youtube.com/embed/IM0sRctOxQc?amp;autoplay=1">
 										<img src="../../asset/image/story/project/hover_step2_img.jpg" alt="THE STORY 마침내 트랙 위를 날다 불가능이라 생각되는 것을 가능하게 만들기 위해 기술, 디자인, 혁신의 모든 한계를 넘다." />
+										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="영상 재생" />
 									</a>
 									<img src="../../asset/image/story/project/hover_step2_txt.png" alt="THE TECH 초전도체 자석과 액체질소의 완전한 결합 액체 질소로 냉각한 초전도체와 호버파크에 설치된 자석 트랙으로 공중에 부상하다" />
-									<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="영상 재생" />
 
 									<ul class="fig-thumb">
 										<li><a href="#"><img src="../../asset/image/story/project/hover_step2_thumb1.jpg" alt="" /></a></li>
@@ -103,11 +105,11 @@
 								</li>
 								<li class="step">
 									<img src="../../asset/image/story/project/hover_step3_txt1.png" alt="THE BOARD" />
-									<a href="#">
+									<a href="https://www.youtube.com/embed/y_5NuNZPI9Y?amp;autoplay=1">
 										<img src="../../asset/image/story/project/hover_step3_img1.jpg" alt="" />
 										<img src="../../asset/image/story/project//hover_play_btn.png" class="right_play_btn" alt="자세히 보기" />
 									</a>
-									<a href="#">
+									<a href="https://www.youtube.com/embed/ee7HhUc3XEM?amp;autoplay=1">
 										<img src="../../asset/image/story/project/hover_step3_img2.jpg" alt="" />
 										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="자세히 보기" />
 									</a>
@@ -123,7 +125,7 @@
 
 								</li>
 								<li class="step step_re">
-									<a href="#">
+									<a href="https://www.youtube.com/embed/F-t74UHvrPs?amp;autoplay=1">
 										<img src="../../asset/image/story/project/hover_step4_img.jpg" alt="" />
 										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="자세히 보기" />
 									</a>
@@ -137,7 +139,7 @@
 									</ul>
 								</li>
 								<li class="step step_re">
-									<a href="#">
+									<a href="https://www.youtube.com/embed/edwpKJ1W600?amp;autoplay=1">
 										<img src="../../asset/image/story/project/hover_step5_img.jpg" alt="" />
 										<img src="../../asset/image/story/project/hover_play_btn.png" class="left_play_btn" alt="자세히 보기" />
 									</a>
@@ -158,33 +160,34 @@
 							<!-- <div class="banner"> -->
 								<ul>
 									<li>
-										<a href="#">
+										<a href="https://www.youtube.com/embed/KDOl9iEtqH4?amp;autoplay=1">
 											<img src="../../asset/image/story/project/part_banner_0.jpg" alt="STEPS 10미터가 넘는 거대한 모형에 생명력을 불어넣은" />
 											<img src="../../asset/image/story/project/btn_contents_play.png" alt="영상 재생" />
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="https://www.youtube.com/embed/f4B56lqaNyM?amp;autoplay=1">
 											<img src="../../asset/image/story/project/part_banner_1.jpg" alt="STROBE 쿠알라 룸 푸르의 밤하늘을 수놓은 라이트 수트의 환상적인 퍼포먼스" />
 											<img src="../../asset/image/story/project/btn_contents_play.png" alt="영상 재생" />
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="https://www.youtube.com/embed/LcovBLmALog?amp;autoplay=1">
 											<img src="../../asset/image/story/project/part_banner_2.jpg" alt="SWARM SWARM 정확히 계산되어 움직이는 쿼드로터의 놀라운 움직임" />
 											<img src="../../asset/image/story/project/btn_contents_play.png" alt="영상 재생" />
 										</a>
 									</li>
 								</ul>
 							<!-- </div> -->
-							<a href="http://www.lexus-int.com/amazinginmotion/" target="_blank" class="btn_view_detail">
+							<!-- http://www.lexus-int.com/amazinginmotion/ -->
+							<a href="https://www.youtube.com/embed/KDOl9iEtqH4?amp;autoplay=1" target="_blank" class="btn_view_detail">
 								<img src="../../asset/image/story/project/btn_view_detail.png" alt="자세히 보기" />
 							</a>
 						</div>
 					</section>
 		  	</li>
 
-		  	<li class="lexus-short-film-con" style="display:none;";>
+		  	<li class="lexus-short-film-con" id="film" style="display:none;";>
 					<section class="film-con-1">
 						<div class="fig-content">
 								<img src="../../asset/image/story/project/shortfilm_kv.jpg" alt="LEXUS SHORT FILMS 키비주얼" />
@@ -276,7 +279,7 @@
 					</section>
 		  	</li>
 
-		  	<li class="lexus-design-award" style="display:block";>
+		  	<li class="lexus-design-award" id="award" style="display:none";>
 					<section class="award-con-1">
 						<div class="fig-content">
 							<img src="../../asset/image/story/project/design_award_kv.jpg" alt="Lexus-Design-Award 이미지" />
