--- a/WebContent/pages/service/lxsv.html
+++ b/WebContent/pages/service/lxsv.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- <script src="/thelexus/asset/js/project.js"></script> -->
+  <script src="../../asset/js/project.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../../asset/css/import.css">
