--- a/WebContent/pages/story/begining.html
+++ b/WebContent/pages/story/begining.html
@@ -64,9 +64,34 @@
               <img src="../../asset/image/story/begining/img_s3_3.jpg" alt="LS 400 video'image">
               <span><img src="../../asset/image/story/begining/btn_model_play.png" alt="play button"></span>
             </div>
+
+<!-- Youtube 팝업 -->
+            <div class="popopen" style="display:none;">
+              <!-- ?rel=0&autoplay=1&loop=1 -->
+            	<!-- <iframe width="1903" height="948" src="https://www.youtube.com/embed/kD3XfMOWPYE" frameborder="0" allowfullscreen></iframe> -->
+
+
+
+              <!-- <p class="close_btn" style="position:fixed;" onclick="close();">
+              	  <a href="javasciprt:void(0)" style="position:fixed; top:50px; right:20px;">
+              	    <span>close button</span>
+              	  </a>
+            	</p> -->
+
+                <a href="javasciprt:void(0)" onclick="close_btn();" style="position:fixed; top:38px; right:20px;">
+                  <span class="cl_btn" style="position:absolute; left:20px; top:20px;">close button</span>
+                </a>
+
+
+            </div>
+<!-- Youtube 팝업 -->
+
             <div class="play_video">
               <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yUeAT3mY9fk"  ></iframe>
             </div>
+
+
+
         </li>
         <li>
             <p><img src="../../asset/image/story/begining/txt_s3_4.png" alt="Best quality ever"></p>
