--- a/WebContent/pages/story/project.html
+++ b/WebContent/pages/story/project.html
@@ -14,10 +14,10 @@
 
 		<div class="project-menu">
 			<ul>
-				<li><a href="#project">AMAZING PROJECT</a></li>
-				<li><a href="#motion">AMAZING IN MOTION</a></li>
-				<li><a href="#film">LEXUS SHORT FILM</a></li>
-				<li><a href="#award">LEXUS DESIGN AWARD</a></li>
+				<li><a href="javascript:void(0)">AMAZING PROJECT</a></li>
+				<li><a href="javascript:void(0)">AMAZING IN MOTION</a></li>
+				<li><a href="javascript:void(0)">LEXUS SHORT FILM</a></li>
+				<li><a href="javascript:void(0)">LEXUS DESIGN AWARD</a></li>
 			</ul>
 		</div>
 
@@ -31,17 +31,17 @@
 						<ul>
 							<li>
 								<img src="../../asset/image/story/project/amazing_in_motion_img0_txt.png" alt="렉서스 기술력, 디자인, 상상력의 가장 이상적인 결합" />
-								<a href="#motion"><img src="../../asset/image/story/project/amazing_in_motion_img0_btn.png" class="img-btn" alt="SLIDE 버튼" /></a>
+								<a href="javascript:void(0)"><img src="../../asset/image/story/project/amazing_in_motion_img0_btn.png" class="img-btn" alt="SLIDE 버튼" /></a>
 								<img src="../../asset/image/story/project/amazing_in_motion_img0.jpg" alt="LEXUS SHORT FILM 이미지" />
 							</li>
 							<li>
 								<img src="../../asset/image/story/project/amazing_in_motion_img1_txt.png" alt="젊은 영화 감독들의 상상력과 열정이 어우러진 무대" />
-								<a href="#film"><img src="../../asset/image/story/project/amazing_in_motion_img1_btn.png" class="img-btn" alt="LEXUS SHORT FILM 버튼" /></a>
+								<a href="javascript:void(0)"><img src="../../asset/image/story/project/amazing_in_motion_img1_btn.png" class="img-btn" alt="LEXUS SHORT FILM 버튼" /></a>
 								<img src="../../asset/image/story/project/amazing_in_motion_img1.jpg" alt="LEXUS SHORT FILM 이미지" />
 							</li>
 							<li>
 								<img src="../../asset/image/story/project/amazing_in_motion_img2_txt.png" alt="독창적인 아이디어를 가진 청년 디자이너들의 등용문" />
-								<a href="#award"><img src="../../asset/image/story/project/amazing_in_motion_img2_btn.png" class="img-btn" alt="LEXUS SHORT FILM 버튼" /></a>
+								<a href="javascript:void(0)"><img src="../../asset/image/story/project/amazing_in_motion_img2_btn.png" class="img-btn" alt="LEXUS SHORT FILM 버튼" /></a>
 								<img src="../../asset/image/story/project/amazing_in_motion_img2.jpg" alt="LEXUS SHORT FILM 이미지" />
 							</li>
 						</ul>
