--- a/thelexus/WebContent/pages/story/day.html
+++ b/thelexus/WebContent/pages/story/day.html
@@ -10,7 +10,7 @@
 <script src="/thelexus/asset/js/gnb.js"></script>
 <title>Amazing Experience Day</title>
 </head>
-<!-- 
+<!--
 <script>
 
 					function popopen() {
@@ -401,25 +401,29 @@
 	</section>
 	<section class="day-con-2">
 		<div class="day-piclist">
-			<div class="thumb1-holder thumnb">
-				<div class="pic-top">
-					<img src="../../asset/image/story/day/thumb_sec2_1_1.jpg" alt="" />
-					<img src="../../asset/image/story/day/thumb_sec2_1_2.jpg" alt="" />
+			<div class="thumb1-holder thumnb clearfix">
+				<div class="pic-top clearfix">
+          <div class="left">
+            <img src="../../asset/image/story/day/thumb_sec2_1_1.jpg" alt="" />
+          </div>
+          <div class="right">
+            <img src="../../asset/image/story/day/thumb_sec2_1_2.jpg" alt="" />
+          </div>
 				</div>
-				<div class="pic-bottom">
+				<div class="pic-bottom clearfix">
 					<img src="../../asset/image/story/day/thumb_sec2_1_3.jpg" alt="" />
 				</div>
 			</div>
-			<div class="thumb2-holder thumnb">
+			<div class="thumb2-holder thumnb clearfix">
 					<img src="../../asset/image/story/day/thumb_sec2_2_1.jpg" alt="" />
-				<div class="pic-bottom">
+				<div class="pic-bottom clearfix">
 					<img src="../../asset/image/story/day/thumb_sec2_2_2.jpg" alt="" />
 					<img src="../../asset/image/story/day/thumb_sec2_2_3.jpg" alt="" />
 				</div>
 			</div>
 		</div>
-		<div class="day-pictxt">
-			<div class="bg-holder">
+		<div class="day-pictxt clearfix">
+			<div class="bg-holder clearfix">
 				<img src="../../asset/image/story/day/bg_sec2.jpg" alt="" />
 			</div>
 			<div class="txt-holder">
@@ -500,7 +504,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- <div class="ongoing-event"> -->
+			<!-- <div class="ongoing-event">
 				<h3>응모하기</h3>
 				<fieldset class="form-wrap">
 					<legend>개인정보 입력하기</legend>
@@ -525,7 +529,7 @@
 						</p>
 					</div>
 				</fieldset>
-			</div>
+			</div> -->
  	</section>
  	<section class="day-con-5">
  		<div class="bg-holder">
