--- a/WebContent/pages/story/day.html
+++ b/WebContent/pages/story/day.html
@@ -54,16 +54,20 @@
 	</section>
 	<section class="day-con-2">
 		<div class="day-piclist">
-			<div class="thumb1-holder thumnb">
+			<div class="thumb1-holder thumnb clearfix">
 				<div class="pic-top">
-					<img src="../../asset/image/story/day/thumb_sec2_1_1.jpg" alt="" />
-					<img src="../../asset/image/story/day/thumb_sec2_1_2.jpg" alt="" />
+					<div class="left clearfix">
+						<img src="../../asset/image/story/day/thumb_sec2_1_1.jpg" alt="" />
+					</div>
+					<div class="right clearfix">
+						<img src="../../asset/image/story/day/thumb_sec2_1_2.jpg" alt="" />
+					</div>
 				</div>
 				<div class="pic-bottom">
 					<img src="../../asset/image/story/day/thumb_sec2_1_3.jpg" alt="" />
 				</div>
 			</div>
-			<div class="thumb2-holder thumnb">
+			<div class="thumb2-holder thumnb clearfix">
 					<img src="../../asset/image/story/day/thumb_sec2_2_1.jpg" alt="" />
 				<div class="pic-bottom">
 					<img src="../../asset/image/story/day/thumb_sec2_2_2.jpg" alt="" />
